# Geo-prospecting-

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chains_blocklist.txt  pyproject.toml
.claude/commands/: audit.md  check.md  draft.md  opener.md  prospect.md  reply.md  stats.md  today.md  week.md
.claude/skills/antek-outreach-voice/: SKILL.md
claim-site/: README.md  build.py  mailing_csv.py  report_template.html  template.html
claim-site/functions/api/: lead.js  view.js
deploy/: DEPLOY.md  brevo_setup.py  brevo_templates.py  wf10-claim-lead.json  wf9-visibility-check.json
src/: __init__.py  cli.py  config.py  db.py  llm.py  server.py
src/clients/: apollo.py  linkedin.py  sunbiz.py
src/ingest/: __init__.py  airtable_sync.py  apollo.py  companies_house.py  csv_import.py  enrich.py  linkedin.py  places.py  router.py  sunbiz.py  util.py
src/messages/: __init__.py  audit.py  generate.py  pipeline.py  queue.py  replies.py  voice.py
src/post/: __init__.py  claims.py  letter.py  stannp.py
src/post/templates/: letter.html.j2
src/reports/: __init__.py  brand.py  stats.py
src/visibility/: __init__.py  ai_query.py  competitor_gate.py  inbound.py  pitchability.py  probes.py  prompts.py  report.py  score.py
src/visibility/templates/: operator_report.html.j2  report.html.j2
