[project]
name = "geo-outreach"
version = "0.1.0"
description = "LinkedIn client acquisition for Antek Automation's GEO services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=1.7",
    "anthropic>=0.40",
    "openai>=1.40",
    "requests>=2.31",
    "jinja2>=3.1",
    "weasyprint>=62",
    "click>=8.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tabulate>=0.9",
    "qrcode[pil]>=7.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
cli = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
